# hashguard-client

./: .gitignore  .prettierignore  LICENSE  README.md  USAGE_GUIDE_KO.md  eslint.config.js  jest.config.js  package-lock.json  package.json  tsconfig.json
crate/: Cargo.toml
crate/src/: lib.rs
scripts/: build-esm.js  build-wasm.js  test-server-integration.mjs  test-wasm-e2e.mjs
src/: client.ts  crypto.ts  index.ts  resource-guard.ts  solver.ts  token-cache.ts  token-validator.ts  types.ts  wasm-loader.ts
test/: core.spec.ts  wasm-acceleration.spec.ts  wasm-loader.spec.ts
