[package]
name = "hashguard-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM-accelerated SHA-256 and PoW solver for Hashguard"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
sha2 = "0.10"
hex = "0.4"
js-sys = "0.3"

[profile.release]
opt-level = "z"   # optimise for binary size
lto = true
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]
